Add raw color choosing.
Raw mean without refactoring.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="file">Файл</string>
     <string name="btn_clear">Стерти</string>
     <string name="color_picker_msg">Виберіть колір</string>
-    <string name="color">Колір</string>
+    <string name="color">Заповнення</string>
+    <string name="stroke">Обведення</string>
 </resources>
