Prepare to lab 5

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="shape_rect">Прямокутник</string>
     <string name="shape_ellipse">Еліпс</string>
     <string name="shape_circle">Коло</string>
-    <string name="shape_line_with_2circle">Лінія з двума колами</string>
+    <string name="shape_line_with_2circle">Лінія з двома колами</string>
     <string name="shape_cube">Куб</string>
     <string name="info">Довідка</string>
     <string name="file">Файл</string>
